# NEXUS-Trading-System

./: .gitignore  LICENSE  NEXUS_AUDIT_CONTEXT.md  README.md  baseline_v22.json  pyproject.toml  test_pipeline.py  test_pipeline2.py  validation_results.csv  validation_v10_overnight.csv  validation_v11_overnight_filtered.csv  validation_v12_vwap_reversed.csv  validation_v13_gap_and_go.csv  validation_v15_power_hour.csv  validation_v17_gap_reverted.csv  validation_v18_gap_highbeta.csv  validation_v19_overnight_highbeta.csv  validation_v2.csv  validation_v20_fixed_sizing.csv  validation_v20_month_end_1.5pct.csv  validation_v21_score_sizing.csv  validation_v22_baseline.csv  validation_v22_final.csv  validation_v22_scored.csv  validation_v23_relaxed.csv  validation_v25_final.csv  validation_v25_forex.csv  validation_v25b_check.csv  validation_v26_optimized.csv  validation_v3.csv  validation_v4.csv  validation_v5_rsi2.csv  validation_v6_rsi2_final.csv  validation_v8_defensive.csv  validation_v9_multi.csv
.claude/: settings.local.json
data/: backtest_426_real_baseline.json  backtest_v2_baseline.json  backtest_v2_no_regime.json  backtest_v2_tuned.json  god_mode_validation.json  paper_trading_state.json
docs/: AUDIT.md  CURRENT_STATE.md  HANDOFF.md  NEXUS Trading System LIVE TEST.docx  NEXUS_BUILD_ROADMAP.md.txt  NEXUS_DEEP_RESEARCH_VALIDATION.md.txt  NEXUS_FINAL_ARCHITECTURE.md.txt  NEXUS_INDICATORS_NEWS_SENTIMENT_1.md.txt  NEXUS_MASTER_INDEX.md.txt  NEXUS_v2.0_ARCHITECTURE.md.txt  NEXUS_v2.1_MAXIMUM_OPPORTUNITY.md.txt  TODO.md  VALIDATION_v1.0_GOD_MODE.md
nexus/: README.md  (+13 more)
(+276 files in other folders)
