[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus"
version = "2.1.0"
description = "NEXUS Algorithmic Trading System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "pandas>=2.2.0",
    "numpy>=1.26.3",
    "ta>=0.11.0",
    "python-dotenv>=1.0.0",
    "groq>=0.4.2",
    "schedule>=1.2.1",
    "structlog>=24.1.0",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus*"]
